# speakeasy

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  test_icon.py
.github/workflows/: ci.yml
src/: __init__.py  audio_player.py  export.py  logger.py  main.py  settings.py  text_extractor.py  tray.py  tts_engine.py
src/ui/: __init__.py  input_window.py  settings_window.py
tests/: __init__.py  conftest.py  test_audio_player.py  test_export.py  test_input_window.py  test_project_setup.py  test_settings.py  test_settings_window.py  test_text_extractor.py  test_tray.py  test_tts_engine.py
